# pst-utils

./: .env  .gitignore  README.md  config.py  extracted_emails.json  helper.py  main.py  make-for-linux.sh  msg_debug2.py  pst-extract.spec  pst0.py  pyproject.toml
backup/: exceptions.py  extracted_emails_enhanced.json  extracted_emails_with_attachments.json  logger.py  msg_debug.py  msg_debug2.py  msg_debug3.py
doc/: helper_debug.py  msg_debug.txt  참고.md
src/: config.py  db_actions.py  helper.py  main.py
