[project]
name = "pst-utils"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "charset-normalizer>=3.4.2",
    "libpff-python>=20231205",
    "pydantic>=2.11.7",
    "pydantic-settings>=2.10.1",
    "python-dotenv>=1.1.1",
    "striprtf>=0.0.29",
]
